Closed
Bug 415867
Opened 13 years ago
Closed 13 years ago
AIX Compilation error for trunk build source cairo-gstate.c : line 45.43: 1506-294 (S) Syntax error in expression on #if directive.
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9beta4
People
(Reporter: shailen.n.jain, Assigned: shailen.n.jain)
Details
Attachments
(1 file)
1.51 KB,
patch
|
roc
:
review+
roc
:
superreview+
mtschrep
:
approval1.9+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.11) Gecko/20071127 Firefox/2.0.0.11 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.11) Gecko/20071127 Firefox/2.0.0.11 While compiling trunk build source mozilla/gfx/cairo/cairo/src/cairo-gstate.c on AIX, getting below compilation error - "mozilla/gfx/cairo/cairo/src/cairo-gstate.c", line 45.43: 1506-294 (S) Syntax error in expression on #if directive. gmake[1]: *** [cairo-gstate.o] Error 1 "mozilla/gfx/cairo/cairo/src/cairo-matrix.c", line 41.43: 1506-294 (S) Syntax error in expression on #if directive. gmake[1]: *** [cairo-matrix.o] Error 1 Reproducible: Always Steps to Reproduce: 1. Build Mozilla Firefox Trunk build on AIX with Gnome RPMS of 64 bit version. 2. 3. Actual Results: Build fails with the above errors. Expected Results: No build failure
Severity: normal → major
OS: Other → AIX
Version: unspecified → Trunk
Modified the code to replace _ISOC99_SOURCE with defined(_ISOC99_SOURCE) in #if statement
Attachment #301629 -
Flags: review?(roc)
Comment on attachment 301629 [details] [diff] [review] Patch V1 Please send this upstream to cairo.
Attachment #301629 -
Flags: superreview+
Attachment #301629 -
Flags: review?(roc)
Attachment #301629 -
Flags: review+
Updated•13 years ago
|
Status: UNCONFIRMED → NEW
Component: Build Config → GFX: Thebes
Ever confirmed: true
Product: Firefox → Core
QA Contact: build.config → thebes
Updated•13 years ago
|
Assignee: nobody → shailen.n.jain
Updated•13 years ago
|
Status: NEW → ASSIGNED
Attachment #301629 -
Flags: approval1.9?
Updated•13 years ago
|
Attachment #301629 -
Flags: approval1.9? → approval1.9+
Updated•13 years ago
|
Keywords: checkin-needed
Comment 3•13 years ago
|
||
Checking in gfx/cairo/cairo/src/cairo-gstate.c; /cvsroot/mozilla/gfx/cairo/cairo/src/cairo-gstate.c,v <-- cairo-gstate.c new revision: 1.29; previous revision: 1.28 done Checking in gfx/cairo/cairo/src/cairo-matrix.c; /cvsroot/mozilla/gfx/cairo/cairo/src/cairo-matrix.c,v <-- cairo-matrix.c new revision: 1.25; previous revision: 1.24 done
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9beta4
(Unless this patch makes its way into gfx/cairo as a patch file, along with an entry in the README file, this'll get blown away the next time I do a cairo update.)
Comment 5•13 years ago
|
||
sjain said on IRC that he was going to send this upstream to Cairo.
Sent an email to http://cairographics.org/contact/ to include the patch for cairo source.
You need to log in
before you can comment on or make changes to this bug.
Description
•