Bug 415867 - "AIX Compilation error for trunk build source cairo-gstate.c : line 45.43: 1506-294 (S) Syntax error in expression on #if directive." [p=shailen.n.jain@gmail.com (Shailen) r+sr=roc a1.9=schrep]